# SnakeTkinter

./: .gitignore  AGENTS.md  CONTRIBUTING.md  FINAL_REPORT.md  PRIORITY2_COMPLETE.md  PRIORITY2_SUMMARY.md  README.md  README_AI.md  README_PRIORITY1.md  README_PRIORITY2.md  ROADMAP.md  TUI_README.md  advanced_analytics.py  ai_tools.py  game_analytics.json  game_modes.py  genetic_ai.py  logger.py  main.py  neural_ai.py  pyproject.toml  requirements.txt  run_game.bat  run_game.ps1  snake_stats.db  ui_enhancements.py
.github/workflows/: ci.yml
pyaisnake/: __init__.py  __main__.py  achievements.py  cli.py  controller.py  engine.py  levels.py  modes.py  multiplayer.py  renderer.py  replay.py  tui.py
pyaisnake/ai/: __init__.py  dqn.py  genetic.py
pyaisnake/tests/: __init__.py  test_engine.py  test_package_exports.py  test_smoke_cli_tui.py  test_tui_state_transitions.py  test_tui_theme_selection.py
tests/: test_ai_tools.py  test_genetic_ai.py  test_logger.py  test_priority2.py  test_ui_enhancements.py
