[project]
name = "pyaisnake"
version = "2.0.0"
description = "Modern Snake game with AI capabilities - CLI version"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PyAISnake Team"}
]
keywords = ["snake", "game", "ai", "cli", "neural-network", "genetic-algorithm"]

dependencies = [
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "rich>=13.0.0",
    "keyboard>=0.13.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
pyaisnake = "pyaisnake.cli:main"
snake = "pyaisnake.cli:main"
snaketui = "pyaisnake.tui:main"

[project.urls]
Homepage = "https://github.com/chelslava/SnakeTkinter"
Repository = "https://github.com/chelslava/SnakeTkinter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyaisnake"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
    "SIM108", # use ternary operator
]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "keyboard",
    "sklearn.*",
    "numpy.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["pyaisnake/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pyaisnake"]
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
